--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "angular": "^1.5.5",
+    "angular-ui-router": "^0.2.18",
     "body-parser": "~1.13.2",
     "bower": "^1.7.9",
     "cookie-parser": "~1.3.5",
@@ -14,7 +16,9 @@
     "express": "~4.13.1",
     "express-jwt": "^3.3.0",
     "gulp": "^3.9.1",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-uglify": "^1.5.3",
