gulp-inject added instead of gulp-browserify

--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "",
   "authors": [
-    "이종윤 <jongyun.lee94@gmail.com>"
+    "이종윤 <jongyun.lee94@gmail.com>"
   ],
   "license": "MIT",
   "homepage": "https://github.com/unistcse421/ClearNote",
