--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
   },
   "devDependencies": {
     "browser-sync": "^2.12.5",
+    "event-stream": "^3.3.2",
     "gulp": "^3.9.1",
     "gulp-docco": "0.0.4",
+    "gulp-inject": "^4.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-livereload": "^3.8.1",
     "gulp-nodemon": "^2.0.6",
     "gulp-notify": "^2.2.0",
+    "gulp-stylus": "^2.3.1",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
     "require-all": "^2.0.0",
