--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jshint": "^2.9.2",
     "main-bower-files": "^2.13.0",
     "require-all": "^2.0.0",
-    "run-sequence": "^1.1.5"
+    "run-sequence": "^1.1.5",
+    "underscore": "^1.8.3"
   }
 }
