--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
     "express-jwt": "^3.3.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
