--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.5",
     "bootstrap": "^3.3.6",
     "angular-ui-router": "^0.2.18",
-    "jquery": "^2.2.3"
+    "jquery": "^2.2.3",
+    "angular-bootstrap": "^1.3.2"
   }
 }
