node version set to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "cleannote",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+  "node": "4.1.1"
+  },
   "scripts": {
     "start": "node app",
     "postinstall": "gulp default"
