--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "^3.3.6",
     "angular-ui-router": "^0.2.18",
     "jquery": "^2.2.3",
-    "angular-bootstrap": "^1.3.2"
+    "angular-bootstrap": "^1.3.2",
+    "socket.io-client": "^1.4.6"
   }
 }
