--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.6"
   },
   "devDependencies": {
     "event-stream": "^3.3.2",
