--- a/package.json
+++ b/package.json
@@ -18,40 +18,35 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
+    "event-stream": "^3.3.2",
     "express": "~4.13.1",
     "express-jwt": "^3.3.0",
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^1.5.3",
-    "jsonwebtoken": "^6.2.0",
-    "mongoose": "^4.4.14",
-    "morgan": "~1.6.1",
-    "passport": "^0.3.2",
-    "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0",
-    "event-stream": "^3.3.2",
-    "gulp": "^3.9.1",
-    "gulp-connect": "^4.0.0",
     "gulp-docco": "0.0.4",
     "gulp-inject": "^4.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.0.6",
     "gulp-notify": "^2.2.0",
     "gulp-stylus": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
+    "jsonwebtoken": "^6.2.0",
     "main-bower-files": "^2.13.0",
+    "mongoose": "^4.4.14",
+    "morgan": "~1.6.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "require-all": "^2.0.0",
     "run-sequence": "^1.1.5",
+    "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.6",
     "underscore": "^1.8.3"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
